Swagger for location routes
